--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,21 @@ h1 {
   float: none;
   margin: 10px 0px 20px 20px;
 }
-.divider {
+.dividerV {
   position: absolute;
   top: 0;
   left: 0;
   width: 50%;
   height: 100%;
   border-right: 1px dashed #000;
+}
+.dividerH {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  border-bottom: 1px dashed #000;
 }
 #fCanvas,
 #iCanvas,
